--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body {
   margin: 40px;
 }
 
+a { 
+  color: white;
+  font-size: 20px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
