--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+:root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -42,10 +49,12 @@ ul {
 }
 li {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   margin: 20px;
 }
-
+li button {
+  margin-left: 10px;
+}
 .button-primary, .input-primary {
   background-color: white;
   color: black;
@@ -63,4 +72,99 @@ button:disabled {
 }
 .input-primary{
   width: 300px;
+}
+
+body {
+  background-color: #000;
+  color: white;
+  text-decoration: none;
+  color-scheme: light dark;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+h1 {
+  font-size: 3rem;
+}
+h1,
+h2 {
+  text-align: center;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+input {
+  width: 90%;
+  margin: 5px;
+  border-radius: 25px;
+  padding: 10px;
+  border: none;
+  color: white;
+  background-color: #3b3b3b;
+  border: 2px solid white;
+
+}
+input:focus {
+  border: 2px solid #6557ff;
+}
+button:disabled,
+button:hover:disabled {
+  background-color: #3b3b3b;
+  color: white;
+  border: none;
+  cursor: not-allowed;
+}
+
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 20px;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: #6557ff;
+  color: white;
+}
+.button-primary, .button-secondary{
+  border-radius: 25px;
+  width: 50%;
+  padding: 10px;
+  margin: 5px;
+}
+.button-primary {
+  background-color: #9187ff;
+  color: black;
+}
+.button-secondary {
+  border: 2px solid #9187ff;
+  background-color: transparent;
+}
+
+.result {
+  width: 100%;
+  background-color: hsl(0, 0%, 7%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 25px;
+}
+
+.navbar a {
+  margin: 10px;
+  border: 2px solid white;
+  padding: 10px;
+}
+hr {
+  margin-top: 30px;
 }
